se agrego fltro a reportes

--- a/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
+++ b/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
@@ -121,7 +121,7 @@
             <div class="switcher">
               <input (click)="notaRecuperable($event.target)" type="checkbox" formControlName="recuperable"
                 [(ngModel)]="header_comprobante.recuperable" id="activo" name="activo" readonly disabled />
-              <label for="activo">Recuperable</label>
+              <label for="activo">Nacional/Extranjero</label>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
