--- a/src/app/modulos/comprobaciones-gastos/reporte-gastos/reporte-filtro/reporte-filtro.component.html
+++ b/src/app/modulos/comprobaciones-gastos/reporte-gastos/reporte-filtro/reporte-filtro.component.html
@@ -102,7 +102,11 @@
                     </select2>
                   </div>
                   <div class="col-md-3 mt-2">
-                    <label for="selec_asistido_usuario"> Nacional/Extranjero </label>
+                    <div class="switcher">
+                      <input type="checkbox" [(ngModel)]="origen" id="activo" name="activo"
+                        [ngModelOptions]="{standalone: true}" />
+                      <label for="activo">Nacional/Extranjero</label>
+                    </div>
                   </div>
 
                 </div>
