[add] limpiar filtro reporte

--- a/src/app/modulos/comprobaciones-gastos/reporte-gastos/reporte-filtro/reporte-filtro.component.html
+++ b/src/app/modulos/comprobaciones-gastos/reporte-gastos/reporte-filtro/reporte-filtro.component.html
@@ -40,12 +40,12 @@
 
                     <div class="row">
                       <div class="col">
-                        <input appNumbersOnly formControlName="folio_comprobacion_desde" placeholder="Desde" type="text"
+                        <input onlyNumbers formControlName="folio_comprobacion_desde" placeholder="Desde" type="text"
                           class="form-control" maxlength="20" name="folio_comprobacion_desde"
                           id="folio_comprobacion_desde" />
                       </div>
                       <div class="col">
-                        <input appNumbersOnly formControlName="folio_comprobacion_hasta" placeholder="Hasta" type="text"
+                        <input onlyNumbers formControlName="folio_comprobacion_hasta" placeholder="Hasta" type="text"
                           class="form-control" maxlength="20" name="folio_comprobacion_hasta"
                           id="folio_comprobacion_hasta" />
                       </div>
