[fix] atencion issues gv

--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -94,7 +94,8 @@
             <button *ngIf="aprobacion_data && aprobacion_data.is_aprobacion" #btn_enviar class="btn btn-danger m-2"
               [disabled]="lista_comprobaciones.length === 0 && totales.total_gastado"
               (click)="rechazarComprobacion(btn_enviar)"> Rechazar </button>
-            <button *ngIf="aprobacion_data && aprobacion_data.is_aprobacion && aprobacion_data.nivel_aproacion !== 2"
+            <button
+              *ngIf="aprobacion_data && aprobacion_data.is_aprobacion && aprobacion_data.nivel_aproacion !== 2  || ( tipo_gasto == 11 && aprobacion_data && aprobacion_data.is_aprobacion) "
               #btn_enviar class="btn btn-danger m-2"
               [disabled]="lista_comprobaciones.length === 0 && totales.total_gastado"
               (click)="solicitarCambiosComprobacion(btn_enviar)"> Solicitar Cambios </button>
@@ -119,7 +120,9 @@
 <!-- Modal Conceptos Comprobantes -->
 <app-modal-conceptos-comprobantes #modalConceptos [comprobante]="comprobante"
   (onGuardarConceptos)="onActualizarComprobantes($event)" [lista_cuentas]="lista_cuentas"
-  [lista_forma_pago]="lista_forma_pago" [aprobacion_parcial]="aprobacion_parcial" [tipo_gasto]="tipo_gasto">
+  [lista_forma_pago]="lista_forma_pago" [aprobacion_parcial]="aprobacion_parcial" [tipo_gasto]="tipo_gasto"
+  [identificador_corporativo]="usuario.identificador_corporativo"
+  (onGuardarPDF)="this.onActualizarConceptosSuccess.emit()">
 </app-modal-conceptos-comprobantes>
 
 <app-modal-agregar-anexo [uuid]="uuid" [identificador_corporativo]="usuario.identificador_corporativo">
