--- a/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.html
@@ -99,7 +99,7 @@
             <div *ngIf="tipo_gasto !== 11 " class="col-md-3 col-sm-4 col-xs-12">
               <label for="forma_pago">Forma de Pago <span class="requerido">*</span> </label>
               <select class="form-control" [(ngModel)]="comprobante.forma_pago" id="tipo_comprobacion"
-                aria-placeholder="Seleccione tipo de comprobante">
+                [disabled]="tipo_gasto == 11 || tipo_gasto == 2" aria-placeholder="Seleccione tipo de comprobante">
                 <option *ngFor="let item of lista_forma_pago" [value]="item.id"
                   [attr.selected]="item.id == comprobante.forma_pago ? true : null"> {{ item.text }} </option>
               </select>
