--- a/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
@@ -19,7 +19,7 @@
           <th style="width: 90px;" scope="col">Cantidad <span class="text-danger">*</span></th>
           <th style="width: 150px;" scope="col">Importe</th>
           <th scope="col">Moneda</th>
-          <th scope="col">Tipo de Cambio</th>
+          <th scope="col" style="min-width: 115px;">Tipo de Cambio</th>
           <th *ngIf="tipo_gasto != 11" style="width: 250px;" scope="col">Concepto<span class="text-danger">*</span></th>
           <th *ngIf="requerir_numero_dias" scope="col">Número Dias<span class="text-danger">*</span></th>
           <th style="width: 120px;" scope="col">Monto a Reembolsar <span class="text-danger">*</span> (MXN) </th>
