--- a/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-form/caja-chica-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-form/caja-chica-form.component.html
@@ -38,7 +38,7 @@
   (onEliminarComprobante)="eliminarComprobante($event)" (onCancelar)="cancelar()" (onComprobar)="comprobar($event)"
   (onEliminarComprobacion)="eliminarComprobacion()" [lista_cuentas]="lista_cuentas"
   (onActualizarConceptosSuccess)="this.obtenerComprobacion()" (onAprobarComprobacion)="procesarAprobacion($event)"
-  (onSolicitarCambiosComprobacion)="solicitarCambiosComprobacion($event)"
+  (onSolicitarCambiosComprobacion)="solicitarCambiosComprobacion($event)" [tipo_gasto]='TIPO_GASTO'
   (onRechazarComprobacion)="rechazarAprobacion($event)" [aprobacion_parcial]="aprobacion_parcial">
 </app-lista-comprobantes-carga>
 
