[add] consecutivo documento papel

--- a/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
@@ -39,7 +39,7 @@
     <div class="col-md-3">
       <label for="uuid">Número Comprobante <span class="requerido">*</span></label>
       <input type="text" name="uuid" id="uuid'" maxlength="25" class="form-control" formControlName="uuid"
-        placeholder="Número Comprobante">
+        placeholder="Número Comprobante" readonly>
     </div>
     <div class="col-md-3">
       <label for="forma_pago">Forma de Pago <span class="requerido">*</span> </label>
