--- a/src/app/modulos/comprobaciones-gastos/otros-gastos/otros-gastos-form/otros-gastos-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/otros-gastos/otros-gastos-form/otros-gastos-form.component.html
@@ -30,7 +30,7 @@
   [numero_comprobante]="numero_viaje" (actualizarFecha)="actualizarFecha($event)"
   (enviarDetalleFactura)="setDetalles($event)" (enviarConceptos)="enviarConceptos($event)"
   (onAgregarComprobante)="agregarComprobante($event)" (cancelarCarga)="cancelarCarga()"
-  (setTimpoCambio)="setTipoCambio($event)">
+  (setTimpoCambio)="setTipoCambio($event)" [consecutivo_comprobante]="consecutivo_comprobante">
 </app-carga-comprobante-extranjero>
 
 <app-lista-comprobantes-carga *ngIf="numero_comprobacion" [lista_comprobaciones]="lista_comprobantes"
