--- a/src/app/modulos/comprobaciones-gastos/prestaciones/prestaciones-form/prestaciones-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/prestaciones/prestaciones-form/prestaciones-form.component.html
@@ -40,7 +40,7 @@
   (enviarDetalleFactura)="setDetalles($event)" (enviarConceptos)="enviarConceptos($event)"
   (onAgregarComprobante)="agregarComprobante($event)" (cancelarCarga)="cancelarCarga()"
   (setTimpoCambio)="setTipoCambio($event)" [tipo_gasto]='TIPO_GASTO'
-  (calcularMontoDisponible)="obtenerSaldoDisponible($event)">
+  (calcularMontoDisponible)="obtenerSaldoDisponible($event)" [consecutivo_comprobante]="consecutivo_comprobante">
 </app-carga-comprobante-extranjero>
 
 <app-lista-comprobantes-carga *ngIf="numero_comprobacion" [lista_comprobaciones]="lista_comprobantes"
