--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
@@ -39,7 +39,8 @@
   (onEliminarComprobacion)="eliminarComprobacion()" [lista_cuentas]="lista_cuentas"
   (onActualizarConceptosSuccess)="this.obtenerComprobacion()" (onAprobarComprobacion)="procesarAprobacion($event)"
   (onSolicitarCambiosComprobacion)="solicitarCambiosComprobacion($event)"
-  (onRechazarComprobacion)="rechazarAprobacion($event)" [aprobacion_parcial]="aprobacion_parcial">
+  [total_comprobantes]="comprobacion_header.total_comprobantes" (onRechazarComprobacion)="rechazarAprobacion($event)"
+  [aprobacion_parcial]="aprobacion_parcial">
 </app-lista-comprobantes-carga>
 
 <app-loading-modal *ngIf="show_loading"></app-loading-modal>
