--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -1,8 +1,7 @@
 <div class="row">
   <div class="col-md-9 table-responsive mh-500">
     <table class="table hover table-striped table-hover table-fixed dataTables_scrollBody">
-      <caption *ngIf="comprobante.total_comprobantes"> Mostrando {{ lista_comprobaciones.length }} de {{
-        total_comprobantes }}comprobantes </caption>
+      <caption class="d-none"></caption>
       <thead>
         <tr>
           <th scope="col"> <input *ngIf="aprobacion_data.is_aprobacion || is_borrador" type="checkbox"
@@ -60,6 +59,8 @@
         </tr>
       </tbody>
     </table>
+    <span *ngIf="comprobante.total_comprobantes"> Mostrando {{ lista_comprobaciones.length }} de {{
+      total_comprobantes }} {{ comprobante.total_comprobantes > 1? 'Comprobantes': 'Comprobante'}} </span>
   </div>
 
   <div class="col-md-3">
