--- a/src/app/modulos/bolsa-flexible/modal-carga-masiva-bf/modal-carga-masiva-bf.component.html
+++ b/src/app/modulos/bolsa-flexible/modal-carga-masiva-bf/modal-carga-masiva-bf.component.html
@@ -20,7 +20,7 @@
         <div class="row mt-2">
           <div class="col mt-2">
             <p>
-              La carga del excel, reiniciá los saldos de los empleados a las cantidades indicadas en el archivo.
+              La carga del Excel, reiniciá los saldos de los empleados a las cantidades indicadas en el archivo.
               A los empleados que no se encuentren en el archivo, su saldo disponible se marcará en $0.00.
             </p>
           </div>
