--- a/src/app/modulos/comprobaciones-gastos/reporte-gastos/reporte-list/reporte-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/reporte-gastos/reporte-list/reporte-list.component.html
@@ -21,7 +21,7 @@
             <tr class="gradeU" *ngFor="let item of lista_comprobantes">
               <td>{{ item.nombre_compania}}</td>
               <td>{{ item.folio_comprobacion}}</td>
-              <td>{{ item.fecha_creacion}}</td>
+              <td>{{ item.fecha_creacion | date}}</td>
               <td>{{ item.nombre_usuario}}</td>
               <td>{{ item.nombre_cc}}</td>
               <td class='ajustar_nota'>
@@ -37,7 +37,7 @@
               <td class='ajustar_nota'> <span [title]="item.motivo"> {{ item.motivo.substring(0, 100) }}{{
                   item.motivo.length >= 100? '...' : '' }} </span></td>
               <td>{{ item.nombre_moneda}}</td>
-              <td>{{ item.monto_reembolsar}}</td>
+              <td>{{ item.monto_reembolsar | currency:'$':'symbol':'1.2-2':'en'}}</td>
               <td>{{ item.nombre_usuario_aprobador}}</td>
               <td>
                 <div style="white-space: nowrap">{{ item.estatus }} </div>
