--- a/src/app/modulos/comprobaciones-gastos/reporte-gastos/reporte-list/reporte-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/reporte-gastos/reporte-list/reporte-list.component.html
@@ -21,7 +21,7 @@
             <tr class="gradeU" *ngFor="let item of lista_comprobantes">
               <td>{{ item.nombre_compania}}</td>
               <td>{{ item.folio_comprobacion}}</td>
-              <td>{{ item.fecha_creacion | date}}</td>
+              <td>{{ item.fecha_creacion }}</td>
               <td>{{ item.nombre_usuario}}</td>
               <td>{{ item.nombre_cc}}</td>
               <td class='ajustar_nota'>
